@@ -1,6 +1,13 @@
 FlightPath 6.x Changelog
 ========================
 
+2022-01-16
+  Changed the 404 error to log as "page_not_found" type, instead of "system", as it shows up quite a bit in the logs and can be
+  difficult to sift through for valid system messages.
+  
+  Updated Lassie message to show time in site's default timezone.
+  
+
 2022-01-15
   Fixed bug where degrees, groups, and courses not in school 0 were showing up (and causing problems) when the schools
   module was turned off.  Changed the logic so that when schools module is not enabled, we will only be shown school=0.
@@ -10,6 +17,7 @@ FlightPath 6.x Changelog
   Added new hook to user module, allowing us to change the display value of a user attribute.
   
   Tweaked function to "balance" the profile items on a page.
+
 
 2022-01-13
   Minor edit: cleared up wording for mass sms permission.
